Fix letter spacing, active tab and @ before name

--- a/frontend/assets/sass/bulma_overrides/elements/form.sass
+++ b/frontend/assets/sass/bulma_overrides/elements/form.sass
@@ -432,7 +432,7 @@ form
   font-size: $help-size
   margin-top: 0.25rem
   color: #7A7A7A
-  letter-spacing: 0.9px
+
   @each $name, $pair in $colors
     $color: nth($pair, 1)
     &.is-#{$name}
